[gd_scene load_steps=2 format=3 uid="uid://cxvh4pqv3n8fb"]

[ext_resource type="Script" uid="uid://b7w3q5jxn8vqm" path="res://scripts/performance_monitor.gd" id="1_monitor"]

[node name="PerformanceMonitor" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 400.0
mouse_filter = 2
script = ExtResource("1_monitor")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.85)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Performance Metrics"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="FPSLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "FPS: 0"

[node name="FrameTimeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Frame: 0.0ms"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="DrawCallsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Draw Calls: 0"

[node name="VerticesLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Vertices: 0"

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MemoryLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Memory: 0.0MB"

[node name="ObjectsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Objects: 0"

[node name="NodesLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Nodes: 0"

[node name="HSeparator4" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="PhysicsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Physics: 0 Hz"